important css fixes to buy-sell mobile, now should always be visible & centered

--- a/app/assets/stylesheets/buy_sell_popup.css.scss
+++ b/app/assets/stylesheets/buy_sell_popup.css.scss
@@ -12,16 +12,21 @@
 }
 
 .buy-popup-shadow {
-  background-color: transparent;
-  position: absolute;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   top:0; right:0; bottom:0; left:0;
+  background-color: transparent;
   z-index: 5;
-  &.mobile {
-    position: fixed;
-    // background-color: rgba(0,0,0,0.5);
+  @extend .flexbox-row-center-center;
+  .close-shadow {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
     top:0; right:0; bottom:0; left:0;
-    z-index: 900;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 5;
   }
 }
 
@@ -33,7 +38,7 @@
   width: 350px;
   height: 130px;
   box-shadow: 0 0.5px 8px -1px rgba(0,122,255,.6);
-  z-index: 6;
+  z-index: 10;
   position: absolute;
   top: 0;
   left: 0;
@@ -233,21 +238,11 @@
   }
 }
 
-.close-shadow {
-  position: absolute;
-  top:0; right:0; bottom:0; left:0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 905;
-}
 .buy-popup{
   &.mobile {
-    // position: fixed;
-    position: absolute;
+    position: relative;
     width: calc(100vw - 30px);
     height: 203px;
-    top: 182px;
-    left: 50%;
-    transform: translateX(-50%);
     z-index: 910;
     
     .first-row {
