--- a/app/assets/stylesheets/mobile/search.css.scss
+++ b/app/assets/stylesheets/mobile/search.css.scss
@@ -1,8 +1,8 @@
 @import "../_base.css.scss";
 
 .mobile {
-  overflow: hidden;
-  outline: none;
+  // overflow: hidden;
+  outline: 0;
   
   .body {
     width: 100vw;
